@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.7386 2004/10/10 07:30:22 jdolecek Exp $
+$NetBSD: CHANGES,v 1.7387 2004/10/10 09:48:35 minskim Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -4596,3 +4596,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Added gnugk-2.0.8 [mjl 2004-10-09]
 	Added strace-4.5.7 [reed 2004-10-10]
 	Updated postgresql74 to 7.4.5 [jdolecek 2004-10-10]
+	Updated moss to 0.1.11 [minskim 2004-10-10]
